add download pages

--- a/src/css/featuredProjects.css
+++ b/src/css/featuredProjects.css
@@ -5,23 +5,31 @@
     gap: 30px;
     align-items: center;
     text-align-last: left;
+    justify-content: center;
+
 }
 
 .featuredProjectImg {
-    width: 50vw;
+    width: 40vw;
     height: 70vh;
     border-radius: 10px;
     cursor: pointer;
 }
 
-/* .text {} */
+p {
+    text-align: left;
+}
 
+.text {
+    width: 35vw;
+}
 
 .text button {
     width: 7vw;
     height: 5vh;
     font-size: 0.8rem;
     border: none;
+    border-radius: 3px;
 }
 
 .text button a {
@@ -39,6 +47,7 @@
     color: white;
 }
 
-.viewCodeBtn {
+.viewCodeBtn,
+.downloadBtn {
     background-color: white;
 }
