--- a/src/css/MiniApps.css
+++ b/src/css/MiniApps.css
@@ -167,7 +167,7 @@ main {
 .footer {
     position: absolute;
     bottom: 20px;
-    left: var(--gap);
+    inset-inline-start: var(--gap);
     width: calc(100% - var(--gap)*2);
     display: flex;
     align-items: center;
@@ -247,7 +247,7 @@ main {
 .linkBtn::before {
     content: '';
     position: absolute;
-    left: 50%;
+    inset-inline-start: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 0;
