--- a/src/css/MiniApps.css
+++ b/src/css/MiniApps.css
@@ -76,7 +76,7 @@ main {
 
 
 /* Title */
-
+/* 
 .title {
     position: absolute;
     inset: 0;
@@ -87,13 +87,11 @@ main {
     justify-content: end;
     padding: 25px 25px 30px;
     z-index: 1;
-}
+} */
 
-.title h1 {
+.text-box h1 {
     font-size: 2rem;
     font-family: "Sunflower", serif;
-    color: black;
-    /* opacity: 1; */
     transition: 0.8 ease;
     transition-delay: 1s;
 }
@@ -247,7 +245,7 @@ main {
 .linkBtn::before {
     content: '';
     position: absolute;
-    inset-inline-start: 50%;
+    left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 0;
