--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -15,6 +15,13 @@
 } */
 
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 @font-face {
     font-family: 'BrownSugar';
     src: url('/public/fonts/brown-sugar.ttf') format('truetype');
@@ -42,6 +49,7 @@
     --footer-clr: #E0FFE0;
     --footer-clr: #FDE2E2;
     --footer-clr: #FFFACD;
+    --section-clr: #2C2C2C;
 }
 
 
@@ -60,97 +68,6 @@ body {
 .lang-en .headline {
     font-family: 'BrownSugar', sans-serif;
 }
-
-/* 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-.container,
-.topNav,
-header,
-#onMe,
-.iconsContainer,
-#projectsContainer,
-#conectsContainer,
-footer,
-.underFooter {
-    width: 100vw;
-    margin: auto;
-}
-
-
-.topNav {
-    width: 100vw;
-    top: 0;
-    height: 80px;
-    position: sticky;
-    background-color: #fcfcfc;
-    z-index: 2;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 48vw;
-
-}
-
-.topNav .profile {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    list-style-type: none;
-    margin-left: 90px;
-}
-
-.topNav .profile img {
-    width: 62px;
-    height: 62px;
-    border-radius: 100px;
-}
-
-.topNav .profile li {
-    width: 120px;
-    height: 35px;
-    font-family: cursive;
-    margin-top: 15px;
-    font-size: 1.3rem;
-    color: #2C2C2C;
-}
-
-.topNav .navBar {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-}
-
-
-.topNav .navBar li {
-    width: 120px;
-    height: 100%;
-    text-align: center;
-    font: normal normal normal 25px/37px 'MyCustomFont';
-}
-
-
-
-.navBar a {
-    text-decoration: none;
-    color: #2C2C2C;
-}
-
-.navBar a:focus {
-    color: #1AE0EC;
-    font: normal normal bold 25px/37px MyCustomFont;
-}
-
-.navBarMobile {
-    display: none;
-} */
-
-
 
 
 .header {
@@ -199,14 +116,6 @@ footer,
     height: 100vh;
 }
 
-/* header .headlineHeader p {
-    font: normal normal medium 20px/30px 'MyCustomFont';
-    letter-spacing: 0px;
-    color: #3A3A3A;
-    text-align: center;
-} */
-
-
 
 .icons {
     margin: auto;
@@ -219,11 +128,6 @@ footer,
     padding: 2vw;
 }
 
-.icons h1 {
-    /* font-family: 'MyCustomFont', sans-serif; */
-    /* font-size: 3rem; */
-    /* margin-bottom: 10vw; */
-}
 
 .icons br {
     display: none;
@@ -260,48 +164,19 @@ footer,
     opacity: 1;
 } */
 
-.projectSection {
+#projectsSection {
     width: 100vw;
-    /* overflow-y: auto;
-    scroll-snap-type: y mandatory; */
-    /* scroll-behavior: smooth; */
-    /* height: 500vh; */
+
     padding: 100px;
     position: relative;
-    /* gap: 30px; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* gap: 50px; */
     z-index: 1;
     margin: 30vh auto;
-    background-color: #fff;
-    /* color: #000; */
+
 }
 
-/* .projectSection h1 {
-    font-size: 3rem;
-} */
-
-
-.projects {
-    /* min-height: 200vh; */
-    /* scroll-snap-align: start; */
-}
-
-/* .project {
-    width: 60vw;
-    height: 80vh;
-    padding: 0 auto;
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    box-shadow: 0px 3px 6px #00000029;
-} */
-
-/* .jsProjectsContainer {
-    padding: 20px 20px 20px 20px;
-    height: 100vh;
-} */
 
 
 
@@ -309,8 +184,7 @@ footer,
 
 
 
-
-.aboutMe {
+#aboutSection {
     width: 100vw;
     /* height: 100vh; */
     padding: 100px;
@@ -324,17 +198,12 @@ footer,
     margin: auto;
 }
 
-
-.aboutMe img {
+#aboutSection img {
     width: 30vw;
     /* height: 60vh; */
     border-radius: 80px;
 }
 
-.textOnMe {
-    /* align-items: center; */
-    /* height: 100vh; */
-}
 
 
 .textOnMe .aboutMePar {
@@ -346,11 +215,9 @@ footer,
 .viewBtn {
     width: 260px;
     height: 41px;
-    /* background: #1AE0EC 0% 0% no-repeat padding-box; */
     border-radius: 25px;
     font: normal normal bold 20px/30px 'MyCustomFont';
     letter-spacing: 0.3px;
-    /* color: #3A3A3A; */
     box-shadow: #000 0 2px 2px;
     cursor: pointer;
 }
@@ -362,27 +229,11 @@ footer,
 
 
 
-/* .textProjects h2 {
-    text-align: center;
-    font: normal normal 900 36px/53px 'MyCustomFont';
-    letter-spacing: 0px;
-    color: #3A3A3A;
-}
-
-.textProjects #mainP {
-    text-align: center;
-    font: normal normal normal 20px/29px 'MyCustomFont';
-    letter-spacing: 0px;
-    color: #3A3A3A;
-} */
-
-
-
-
 /* Contact */
-#conectsContainer {
+#contactSection {
     height: 959px;
     background: #3A3A3A;
+    color: #fff;
     display: flex;
     flex-direction: row;
     gap: 10vw;
@@ -390,7 +241,7 @@ footer,
     text-align: right;
 }
 
-#conectsContainer .letterContainer {
+#contactSection .letterContainer {
     margin-top: 0;
     height: 100%;
     margin-left: 100px;
@@ -463,8 +314,7 @@ textarea {
 }
 
 footer {
-    /* height: 200px; */
-    /* background: #1AE0EC; */
+
     background-color: var(--footer-clr);
     padding: 5vh;
 }
@@ -500,7 +350,7 @@ footer nav p {
 
 .underFooter {
     height: 9vh;
-    background: #000;
+    background: #2C2C2C;
     border-bottom: 6px solid var(--footer-clr);
     display: flex;
     flex-direction: row;
@@ -537,13 +387,26 @@ button {
     position: relative;
 }
 
-
-.languageImg {
-    width: 6vh;
+/* .languageButtons {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 15vh;
+    right: 2vw;
+    text-align: center;
+    padding: 10px;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
 }
 
 
-.contactContainer {
+.languageImg {
+    width: 6vh;
+} */
+
+
+#contactSection {
     display: flex;
     flex-direction: row;
 }
@@ -554,7 +417,7 @@ button {
     align-items: center;
     margin: auto;
     width: 80vw;
-    z-index: 1000;
+    z-index: 10;
     position: relative;
     margin-bottom: 10vh;
 }
@@ -574,7 +437,6 @@ button {
 }
 
 .headline {
-    /* font: normal normal 900 60px/100px 'MyCustomFont'; */
     font-size: 60px;
     line-height: 20vh;
 }
@@ -589,4 +451,27 @@ button {
     width: 60vw;
     margin: auto;
     text-align: center;
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .languageButtons {}
+
+    .languageImg {
+        width: 5vh;
+    }
+
+    /* .languageButtons {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        top: 15vh;
+        right: 2vw;
+        text-align: center;
+        padding: 10px;
+        z-index: 1000;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        background-color: #fff;
+    } */
 }
