--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -46,8 +46,8 @@
 }
 
 :root {
-    --footer-clr: #E0FFE0;
-    --footer-clr: #FDE2E2;
+    /* --footer-clr: #E0FFE0;
+    --footer-clr: #FDE2E2; */
     --footer-clr: #FFFACD;
     --section-clr: #2C2C2C;
 }
@@ -129,9 +129,6 @@ body {
 }
 
 
-.icons br {
-    display: none;
-}
 
 .icon {
     margin: auto;
@@ -150,7 +147,7 @@ body {
     flex-direction: row;
     gap: 25px;
     justify-content: center;
-    margin-top: 7vw;
+    margin-top: 3vw;
     text-align: center;
 }
 
@@ -166,14 +163,13 @@ body {
 
 #projectsSection {
     width: 100vw;
-
-    padding: 100px;
+    /* padding: 100px; */
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     z-index: 1;
-    margin: 30vh auto;
+    margin: auto;
 
 }
 
@@ -188,7 +184,7 @@ body {
     width: 100vw;
     /* height: 100vh; */
     padding: 100px;
-    /* text-align: center; */
+    text-align: center;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -230,15 +226,16 @@ body {
 
 
 /* Contact */
+
 #contactSection {
-    height: 959px;
+    height: 180vh;
     background: #3A3A3A;
     color: #fff;
     display: flex;
-    flex-direction: row;
-    gap: 10vw;
+    /* flex-direction: row; */
+    /* gap: 10vw; */
     align-items: center;
-    text-align: right;
+    box-sizing: border-box;
 }
 
 #contactSection .letterContainer {
@@ -419,7 +416,6 @@ button {
     width: 80vw;
     z-index: 10;
     position: relative;
-    margin-bottom: 10vh;
 }
 
 .contactForm .form-control:focus {
