--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -335,7 +335,7 @@ footer nav {
     gap: 5vh;
 }
 
-.iconContainer p {
+.iconContainer .footerIconTtl {
     font: normal normal normal 14px/21px;
     font-family: 'Inter', sans-serif;
     letter-spacing: 0px;
