--- a/src/css/MiniApps.css
+++ b/src/css/MiniApps.css
@@ -34,9 +34,6 @@ main {
     font-family: "Poppins", serif;
     overflow: hidden;
     width: 100vw;
-
-    /* width: 100%;
-    height: 120vh; */
 }
 
 
@@ -74,21 +71,6 @@ main {
     filter: grayscale(0);
 }
 
-
-/* Title */
-/* 
-.title {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    padding: 25px 25px 30px;
-    z-index: 1;
-} */
-
 .text-box h1 {
     font-size: 2rem;
     font-family: "Sunflower", serif;
@@ -100,6 +82,73 @@ main {
     /* opacity: 0; */
     transition-delay: -200s;
     color: var(--primary-clr);
+}
+
+
+/** Category **/
+
+.category {
+    position: absolute;
+    top: 2vh;
+    left: 2vh;
+    z-index: 10;
+}
+
+.category span {
+    color: var(--primary-clr);
+    font-size: 0.85rem;
+    padding: 5px 15px;
+    border: 1px solid rgba(225, 225, 225, 0.5);
+    border-radius: 30px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    background: rgba(225, 225, 225, 0.2);
+    opacity: 0;
+}
+
+.swiper-slide-active .category span {
+    opacity: 1;
+    transition: 0.8s ease-out;
+    transition-delay: calc(1.5s + var(--i) * 0.4s);
+}
+
+.dd:active {
+    background: var(--accent-clr);
+    font-size: 3rem;
+}
+
+
+/* Tools */
+
+.tools {
+    position: absolute;
+    top: 1vh;
+    right: 2vw;
+    display: flex;
+    flex-direction: column;
+    gap: 8vh;
+    flex-wrap: wrap;
+}
+
+.tools span {
+    padding: 5px 15px;
+    box-shadow: 0 4px 30px rgba(254, 254, 254, 0.623);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    opacity: 0;
+    z-index: 2;
+}
+
+.swiper-slide-active .tools span {
+    opacity: 1;
+    transition: 0.8s ease-out;
+    transition-delay: calc(1.5s + var(--i) * 0.4s);
+}
+
+.toolsIcons {
+    width: 45px;
+    height: 45px;
 }
 
 
@@ -163,63 +212,24 @@ main {
 /** Footer **/
 
 .footer {
-    position: absolute;
-    bottom: 20px;
-    inset-inline-start: var(--gap);
-    width: calc(100% - var(--gap)*2);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    margin-top: 5vh;
+    justify-content: center;
     opacity: 0;
     z-index: 10;
+    display: flex;
+    flex-direction: row;
+    gap: 2vw;
 }
 
 .swiper-slide-active .footer {
     opacity: 1;
 }
 
-/** Footer --> Category **/
-
-.category {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.category span {
-    color: var(--primary-clr);
-    font-size: 0.85rem;
-    padding: 5px 15px;
-    border: 1px solid rgba(225, 225, 225, 0.5);
-    border-radius: 30px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: rgba(225, 225, 225, 0.2);
-    opacity: 0;
-}
-
-.swiper-slide-active .category span {
-    opacity: 1;
-    transition: 0.8s ease-out;
-    transition-delay: calc(1.5s + var(--i) * 0.4s);
-}
-
-.dd:active {
-    background: var(--accent-clr);
-    font-size: 3rem;
-}
 
 /** Footer --> Button **/
 
-.buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
 .linkBtn {
-    position: relative;
+    /* position: relative; */
     font-size: 0.85rem;
     font-weight: 500;
     padding: 8px 15px;
@@ -351,34 +361,4 @@ main {
 
 .swiperContainer {
     height: 200vw;
-}
-
-.tools {
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    flex-wrap: wrap;
-}
-
-.tools span {
-    padding: 5px 15px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    opacity: 0;
-    z-index: 2;
-}
-
-.swiper-slide-active .tools span {
-    opacity: 1;
-    transition: 0.8s ease-out;
-    transition-delay: calc(1.5s + var(--i) * 0.4s);
-}
-
-.toolsIcons {
-    width: 45px;
-    height: 45px;
-
 }
