style mobile mood

--- a/src/css/MiniApps.css
+++ b/src/css/MiniApps.css
@@ -33,7 +33,7 @@ main {
     background: #03171d;
     font-family: "Poppins", serif;
     overflow: hidden;
-    width: 100vw;
+    width: 100%;
 }
 
 
