--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -162,7 +162,7 @@ body {
 } */
 
 #projectsSection {
-    width: 100vw;
+    width: 100%;
     /* padding: 100px; */
     position: relative;
     display: flex;
@@ -181,7 +181,7 @@ body {
 
 
 #aboutSection {
-    width: 100vw;
+    width: 100%;
     /* height: 100vh; */
     padding: 100px;
     text-align: center;
