--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  /* max-width: 90%; */
+  overflow-x: hidden;
+}
+
+html {
+  width: 100%;
+  /* max-width: 90%; */
+  overflow-x: hidden;
 }
 
 code {
