--- a/src/css/introAnimation.css
+++ b/src/css/introAnimation.css
@@ -27,10 +27,14 @@
     top: 15vh;
     right: 2vw;
     text-align: center;
-    padding: 10px;
+    padding: 8px;
     z-index: 1000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-color: #fff;
+}
+
+.languageButtons Button {
+    padding: 8px;
 }
 
 
@@ -41,7 +45,6 @@
 
 .meImg {
     top: 18vh;
-    /* left: 15%; */
     width: 30vw;
     height: 60vh;
 }
@@ -53,17 +56,18 @@
 
 @media screen and (max-width: 768px) {
     .languageButtons {
-        top: 10vh;
+        top: 4vh;
         right: 3vw;
         padding: 5px;
     }
 
+    .languageButtons Button {
+        padding: 7px;
+    }
 
     .meImg {
-        /* left: 30%; */
-        top: 7vh;
+        top: 11vh;
         width: 80vw;
-        /* max-width: 160px; */
         height: 40vh;
     }
 
