--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -91,10 +91,14 @@
     right: 20px;
     flex-direction: column;
     justify-content: space-between;
-    width: 30px;
-    height: 22px;
+    width: 40px;
+    height: 42px;
     cursor: pointer;
     z-index: 1100;
+    background-color: #fff;
+    padding: 8px;
+    border-radius: 5px;
+    /* mix-blend-mode: difference; */
 }
 
 
@@ -107,13 +111,14 @@
 }
 
 
-.hamburger {
+#hamburgerContainer .hamburger {
     width: 100%;
     height: 4px;
     background-color: #2C2C2C;
     border-radius: 4px;
-    transition: all 0.3s ease;
 }
+
+
 
 @media screen and (max-width: 768px) {
 
