--- a/src/css/featuredProjects.css
+++ b/src/css/featuredProjects.css
@@ -44,15 +44,22 @@
     text-align: start;
 }
 
-.text button {
-    width: 7vw;
+.text .buttons {
+    display: flex;
+}
+
+.text .buttons .button {
+    width: 9vw;
     height: 5vh;
     font-size: 0.8rem;
     border: none;
     border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.text button a {
+.text .button a {
     text-decoration: none;
     justify-content: center;
     display: flex;
