--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -1,20 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=MyCustomFont:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:ital,opsz,wght@1,6..12,600&display=swap'); */
-
-/* @font-face {
-    font-family: 'MyCustomFont'; */
-/* שם הפונט */
-/* src: url('/public/fonts/brown-sugar.ttf') format('truetype'); */
-/* src: url('/public/fonts/VarelaRound-Regular.ttf') format('truetype'); */
-
-
-/* src: url('/public/fonts/SourGummy-VariableFont_wdth,wght.ttf') format('truetype'); */
-/* src: url('/public/fonts/SourGummy-Italic-VariableFont_wdth,wght.ttf') format('truetype'); */
-/* נתיב לקובץ הפונט */
-/* font-weight: normal;
-    font-style: normal;
-} */
-
-
 * {
     margin: 0;
     padding: 0;
@@ -69,13 +52,6 @@ body {
     /* height: 1000vh; */
 }
 
-.lang-he .headline {
-    font-family: 'VarelaRound', sans-serif;
-}
-
-.lang-en .headline {
-    font-family: 'BrownSugar', sans-serif;
-}
 
 
 .header {
@@ -104,17 +80,6 @@ body {
     position: absolute;
 }
 
-/* .headline {
-    right: 0;
-}
-
-.headline {
-    text-align: center;
-    font-family: 'MyCustomFont', sans-serif;
-    font: normal normal 900 200px/118px 'MyCustomFont';
-    letter-spacing: 0px;
-    margin-bottom: 8px;
-} */
 
 .textHeader {
     left: 0;
@@ -126,16 +91,13 @@ body {
 
 
 .icons {
-    margin: auto;
-    width: 80vw;
-    text-align: center;
-    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    row-gap: 10vh;
     justify-content: center;
-    align-items: center;
-    z-index: 9;
-    padding: 2vw;
+    margin-top: 3vw;
+    text-align: center;
 }
-
 
 
 .icon {
@@ -143,21 +105,19 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1vw;
+    align-items: center;
 }
 
-.icons img {
+.iconImg {
     width: 5vw;
 }
 
-.firstRowIcons,
-.secondRowIcons {
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-    justify-content: center;
-    margin-top: 3vw;
-    text-align: center;
-}
+
+
+/* 
+.icons>icon:nth-child(n+7) {
+    grid-column: span 1;
+} */
 
 
 .ProjectsButtons {
@@ -487,9 +447,19 @@ label.focused .ttlTxtContact {
     width: 20vw;
 }
 
+
 .headline {
-    font-size: 60px;
+    /* font-size: 60px; */
+    font-size: 4rem;
     line-height: 20vh;
+}
+
+.lang-he .headline {
+    font-family: 'VarelaRound', sans-serif;
+}
+
+.lang-en .headline {
+    font-family: 'BrownSugar', sans-serif;
 }
 
 .form-control:focus {
@@ -511,6 +481,44 @@ label.focused .ttlTxtContact {
 
     .languageImg {
         width: 5vh;
+    }
+
+
+    .headline {
+        font-size: 2rem;
+        line-height: 8vh;
+    }
+
+
+    .iconsContainer {
+        width: 80vw;
+        margin: auto;
+    }
+
+
+    .icons {
+        margin-top: 10vh;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* grid-template-columns: repeat(5, 1fr); */
+        row-gap: 10vh;
+    }
+
+    .iconImg {
+        width: 13vw;
+        margin-bottom: 1vh;
+    }
+
+    .iconText {
+        font-size: 15px;
+    }
+
+    .iconsHeadlineBox {
+        /* align-items: center;
+        text-align: center;
+        width: 5vw;
+        margin: 0;
+        justify-content: center; */
     }
 
     /* .languageButtons {
