--- a/src/css/featuredProjects.css
+++ b/src/css/featuredProjects.css
@@ -11,23 +11,28 @@
 
 .featuredContainer {
     width: 100vw;
-    height: 350vh;
+    height: auto;
     background-color: #2C2C2C;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10vh;
 }
+
 
 .project {
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.301);
+    box-shadow: 0 4px 12px rgb(0, 0, 0);
     border-radius: 15px;
-    width: 80vw;
-    height: 90vh;
+    width: auto;
+    height: auto;
+    padding: 1vw;
     display: flex;
     gap: 2vw;
     align-items: center;
     justify-content: center;
-    margin: 10vh auto;
+    margin: 10vh;
 }
 
 .featuredProjectImg {
@@ -80,4 +85,46 @@
 .viewCodeBtn,
 .downloadBtn {
     background-color: white;
+}
+
+
+@media screen and (max-width: 768px) {
+
+
+
+    .project {
+        width: 80vw;
+        height: auto;
+        padding: 15px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 7vh;
+    }
+
+
+    .featuredProjectImg {
+        width: 75vw;
+        height: 40vh;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+
+    .text {
+        width: 70vw;
+        font-size: 13px;
+        text-align: start;
+    }
+
+    .text .buttons {
+        width: 70vw;
+        justify-content: space-between;
+    }
+
+    .text .buttons .button {
+        width: auto;
+        padding: 2vw;
+        font-size: 13px;
+    }
 }
