--- a/src/css/landingPages.css
+++ b/src/css/landingPages.css
@@ -1,23 +1,19 @@
-#projectsContainer {
-    width: 100%;
-    height: 180vh;
+.landingPagesContainer {
+    width: 100vw;
+    height: auto;
     background: #F6F6F6;
-    padding: 100px;
+    padding: 2vw;
 }
 
-
-#projectsContainer .gridContainer {
-    margin: auto;
-    /* width: 100vw; */
-    /* height: 1086px; */
+.landingPagesContainer .gridContainer {
+    width: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 50px;
+    margin: 2vw;
 }
 
 .gridContainer .card {
-    width: 25vw;
+    width: 23vw;
     height: 70vh;
     box-shadow: 3px 3px 15px #00000029;
     border-radius: 10px;
@@ -25,12 +21,12 @@
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    margin: 3vw;
 }
 
 
 .card img {
-    height: 100vh;
-    /* object-fit: cover; */
+    height: 100%;
     border-radius: 10px 10px 0px 0px;
     transition: height 0.5s ease-in-out;
 }
@@ -38,21 +34,13 @@
 
 .textArea {
     display: none;
-    /* height: 50%; */
     overflow: hidden;
-    /* background-color: #535252; */
-    /* color: #fff; */
-    /* transition: opacity 0.5s ease, transform 0.5s ease; */
 }
 
 
 .textArea .buttonsCard {
     margin: 1vw;
 }
-
-/* .card:active {
-    border: #000 1px solid;
-} */
 
 .card:hover img,
 .card.selected img {
@@ -62,10 +50,7 @@
 .card:hover .textArea,
 .card.selected .textArea {
     display: block;
-    /* height: 30%; */
-    /* opacity: 0; */
     transform: translateY(20px);
-    /* pointer-events: none; */
 }
 
 .card:hover .card h3 {
@@ -78,7 +63,7 @@
     color: #3A3A3A;
 }
 
-.card .pCard {
+/* .card .pCard {
     width: 352px;
     height: 66px;
     margin-left: 24px;
@@ -87,7 +72,7 @@
     font: normal normal normal 16px/24px 'MyCustomFont';
     letter-spacing: 0px;
     color: #3A3A3A;
-}
+} */
 
 .card .iconsCardContainer {
     display: flex;
@@ -103,10 +88,6 @@
 
 
 .card button {
-    /* margin-left: 123px;
-    margin-top: 24px;
-    width: 153px;
-    height: 30px; */
     width: 8vw;
     background: #1AE0EC 0% 0% no-repeat padding-box;
     border-radius: 15px;
@@ -121,12 +102,78 @@
     margin-top: 1vw;
 }
 
-/* .card button:hover {
-    width: 156px;
-    height: 32px;
-} */
 
 .card.selected {
     border: 2px solid #007bff;
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+    .landingPagesContainer {
+        padding: 10vw;
+        display: flex;
+        justify-content: center;
+    }
+
+    .landingPagesContainer .gridContainer {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 8vw;
+    }
+
+    .gridContainer .card {
+        width: 40vw;
+        height: 60vh;
+        margin: 0;
+    }
+
+    .textArea {
+        font-size: 13px;
+        display: none;
+    }
+
+
+    .textArea .buttonsCard {
+        margin: 0;
+    }
+
+    .card:hover .textArea,
+    .card.selected .textArea {
+        display: flex;
+        transform: translateY(0);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 2vh;
+    }
+
+    .card h3 {
+        width: 80%;
+        font-size: 1.1rem;
+    }
+
+
+    .card .iconsCardContainer {
+        display: flex;
+        flex-direction: row;
+        gap: 6px;
+        justify-content: center;
+    }
+
+    .card .iconsCardContainer img {
+        width: 20px;
+        height: 20px;
+    }
+
+
+    .card button {
+        width: 20vw;
+        height: 4vh;
+        padding: 1vw;
+        margin: 1vw;
+    }
+
 }
