--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -129,8 +129,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
-    margin: 30vh 0 10vh 0;
+    margin: 30vh 0 0 0;
 }
 
 
@@ -412,6 +411,8 @@ label.focused .ttlTxtContact {
     text-align: center;
 }
 
+
+/* For mobile sizes */
 
 @media screen and (max-width: 768px) {
 
